--- a/static/css/style.css
+++ b/static/css/style.css
@@ -664,7 +664,8 @@ body {
   gap: 64px;
 }
 .news_container .news_body img {
-  width: 380px;
+  max-width: 430px;
+  max-height: 295px;
 }
 .news_container .news_body .news_posts {
   display: -webkit-box;
@@ -1371,7 +1372,6 @@ body {
 .important1 .important1_title {
   padding-top: 28px;
   margin-bottom: 28px;
-  line-height: 56px;
   /* identical to box height */
   color: #000000;
 }
@@ -1380,6 +1380,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 44px;
+  padding-bottom: 32px;
 }
 .important1 .important1_body .important1_text {
   display: -webkit-inline-box;
@@ -1418,6 +1419,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 44px;
+  padding-bottom: 32px;
 }
 .important2_container .important2_body .important2_text {
   line-height: 25px;
@@ -1444,7 +1446,6 @@ body {
   background-color: #F2F9FA;
 }
 .important3_container .important3_title {
-  margin-top: 32px;
   margin-bottom: 28px;
   padding-top: 28px;
   /* identical to box height */
@@ -1455,6 +1456,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 44px;
+  padding-bottom: 32px;
 }
 .important3_container .important3_body .important3_text {
   line-height: 25px;
@@ -1466,6 +1468,7 @@ body {
   color: #000000;
 }
 .important3_container .important3_body .important3_text a {
+  margin-bottom: 0px;
   max-width: 203px;
   background: linear-gradient(40.37deg, #E80B8B 0%, #FF8ED0 100%);
   border-radius: 50px;
