--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -682,7 +682,6 @@ body {
                 font-size: 16px;
                 // line-height: 19px;
                 text-align: center;
-                font-family: 'Inter';
                 background: linear-gradient(40.37deg, #E80B8B 0%, #FF8ED0 100%);
                 border-radius: 50px;
                 width: 203px;
@@ -2238,9 +2237,11 @@ body {
         margin: 0 0 28px 0;
         line-height: 1.5;
     }
-    img {
-        margin-bottom: 32px;
-    }
+   
+}
+.page_gosuslugi_container img {
+	width: 789px;
+    margin-bottom: 32px;
 }
 
 // ----------------Результаты СОУТ-------------
