--- a/static/libs/slick/slick-theme.scss
+++ b/static/libs/slick/slick-theme.scss
@@ -12,8 +12,8 @@ $slick-dot-color: black !default;
 $slick-dot-color-active: $slick-dot-color !default;
 // $slick-prev-character: "\2039" !default;
 // $slick-next-character: "\203A" !default;
-$slick-prev-character: url("http://ce40725-wordpress-sxtw3.tw1.ru/wp-content/uploads/2023/06/left-arrow.svg") !default;
-$slick-next-character: url("http://ce40725-wordpress-sxtw3.tw1.ru/wp-content/uploads/2023/06/right-arrow.svg") !default;
+$slick-prev-character: url("http://test-dev1.ru/wp-content/uploads/2023/06/left-arrow.svg") !default;
+$slick-next-character: url("http://test-dev1.ru/wp-content/uploads/2023/06/right-arrow.svg") !default;
 $slick-dot-character: "\2022" !default;
 $slick-dot-size: 6px !default;
 $slick-opacity-default: 0.75 !default;
