--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1843,7 +1843,7 @@ body {
     }
     .vacancies_contact {
         display: flex;
-        gap: 16px;
+        gap: 15px;
         justify-content: space-between;
         align-items: center;
         margin-bottom: 32px;
@@ -1852,15 +1852,23 @@ body {
             background: $white;
             box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
             border-radius: 10px;
-            max-width: 360px;
+            max-width: 365px;
             min-height: 106px;
-            display: block;
+            // display: block;
             line-height: 25px;
             padding-top: 28px;
             font-weight: 500;
+            // display: flex;
+            span {
+                font-family: $font_opensans;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: normal;
+            }
         }
         .block1 {
-            padding: 28px 5px;
+            padding: 28px 7px;
         }
         .block2 {
             padding: 28px 32px;
@@ -2471,8 +2479,12 @@ body {
         line-height: 1.5;
     }
     .job-title {
-        color: #45A6AF;
+        color: $header_bg;
         font-size: 12px;
+        font-family: $font_opensans;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
     }
     .acreditation-title {
         line-height: 2;
