--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1854,11 +1854,12 @@ body {
             border-radius: 10px;
             max-width: 365px;
             min-height: 106px;
-            // display: block;
-            line-height: 25px;
+            display: block;
+            // line-height: 25px;
             padding-top: 28px;
             font-weight: 500;
-            // display: flex;
+            
+            
             span {
                 font-family: $font_opensans;
                 font-size: 18px;
