--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -113,7 +113,7 @@ body {
             }
             .header_phone-link,
             .visually_impaired-link {
-                font-family: $font_opensans;
+                font-family: 'OpenSansCondensed';
                 font-style: normal;
                 font-weight: 700;
                 font-size: 20px;
