--- a/static/css/_fonts.scss
+++ b/static/css/_fonts.scss
@@ -43,6 +43,14 @@
     font-stretch: normal
   }
   
+  @font-face {
+    font-family:'OpenSansCondensed';
+    src: url('../fonts/open-sans-condensed-bold.eot');
+    src: url('../fonts/open-sans-condensed-bold.eot?#iefix') format('embedded-opentype'),url('../fonts/open-sans-condensed-bold.woff2') format('woff2'),url('../fonts/open-sans-condensed-bold.woff') format('woff'),url('../fonts/open-sans-condensed-bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+    font-stretch: normal
+  }
   
   
   
