--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,6 +113,14 @@ hr {
   font-style: normal;
   font-stretch: normal;
 }
+@font-face {
+  font-family: "OpenSansCondensed";
+  src: url("../fonts/open-sans-condensed-bold.eot");
+  src: url("../fonts/open-sans-condensed-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans-condensed-bold.woff2") format("woff2"), url("../fonts/open-sans-condensed-bold.woff") format("woff"), url("../fonts/open-sans-condensed-bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+  font-stretch: normal;
+}
 .container {
   margin: 0 auto;
   max-width: 1200px;
@@ -292,7 +300,7 @@ body {
 }
 .header_middle .header_container .site_identification .header_phone-link,
 .header_middle .header_container .site_identification .visually_impaired-link {
-  font-family: "OpenSans";
+  font-family: "OpenSansCondensed";
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
