--- a/static/css/_fonts.scss
+++ b/static/css/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family:'OpenSans';
-    src: url('../fonts/OpenSansLight.eot');
-    src: url('../fonts/OpenSansLight.eot?#iefix') format('embedded-opentype'), url('../fonts/OpenSansLight.woff2') format('woff2'), url('../fonts/OpenSansLight.woff') format('woff'), url('../fonts/OpenSansLight.ttf') format('truetype');
+    src: url('../fonts/open-sans.eot');
+    src: url('../fonts/open-sans.eot?#iefix') format('embedded-opentype'), url('../fonts/open-sans.woff2') format('woff2'), url('../fonts/open-sans.woff') format('woff'), url('../fonts/open-sans.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
     font-stretch: normal
@@ -27,8 +27,8 @@
   
   @font-face {
     font-family:'OpenSans';
-    src: url('../fonts/OpenSansBold.eot');
-    src: url('../fonts/OpenSansBold.eot?#iefix') format('embedded-opentype'),url('../fonts/OpenSansBold.woff2') format('woff2'),url('../fonts/OpenSansBold.woff') format('woff'),url('../fonts/OpenSansBold.ttf') format('truetype');
+    src: url('../fonts/open-sans-bold.eot');
+    src: url('../fonts/open-sans-bold.eot?#iefix') format('embedded-opentype'),url('../fonts/open-sans-bold.woff2') format('woff2'),url('../fonts/open-sans-bold.woff') format('woff'),url('../fonts/open-sans-bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
     font-stretch: normal
