--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,8 +75,8 @@ hr {
 
 @font-face {
   font-family: "OpenSans";
-  src: url("../fonts/OpenSansLight.eot");
-  src: url("../fonts/OpenSansLight.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSansLight.woff2") format("woff2"), url("../fonts/OpenSansLight.woff") format("woff"), url("../fonts/OpenSansLight.ttf") format("truetype");
+  src: url("../fonts/open-sans.eot");
+  src: url("../fonts/open-sans.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans.woff2") format("woff2"), url("../fonts/open-sans.woff") format("woff"), url("../fonts/open-sans.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
@@ -99,8 +99,8 @@ hr {
 }
 @font-face {
   font-family: "OpenSans";
-  src: url("../fonts/OpenSansBold.eot");
-  src: url("../fonts/OpenSansBold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSansBold.woff2") format("woff2"), url("../fonts/OpenSansBold.woff") format("woff"), url("../fonts/OpenSansBold.ttf") format("truetype");
+  src: url("../fonts/open-sans-bold.eot");
+  src: url("../fonts/open-sans-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans-bold.woff2") format("woff2"), url("../fonts/open-sans-bold.woff") format("woff"), url("../fonts/open-sans-bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
@@ -2074,9 +2074,16 @@ body {
   min-height: 106px;
   display: block;
   padding-top: 28px;
-  font-weight: 500;
 }
-.vacancies_container .vacancies_contact .vacancies_contact_item span {
+.vacancies_container .vacancies_contact .vacancies_contact_item .vacancies_contact_item_top {
+  color: #000000;
+  font-family: "OpenSans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.vacancies_container .vacancies_contact .vacancies_contact_item .vacancies_contact_item_down {
   font-family: "OpenSans";
   font-size: 18px;
   font-style: normal;
