--- a/static/css/_fonts.scss
+++ b/static/css/_fonts.scss
@@ -18,8 +18,8 @@
   
   @font-face {
     font-family:'OpenSans';
-    src: url('../fonts/OpenSansSemiBold.eot');
-    src: url('../fonts/OpenSansSemiBold.eot?#iefix') format('embedded-opentype'),url('../fonts/OpenSansSemiBold.woff2') format('woff2'),url('../fonts/OpenSansSemiBold.woff') format('woff'),url('../fonts/OpenSansSemiBold.ttf') format('truetype');
+    src: url('../fonts/open-sans-semibold.eot');
+    src: url('../fonts/open-sans-semibold.eot?#iefix') format('embedded-opentype'),url('../fonts/open-sans-semibold.woff2') format('woff2'),url('../fonts/open-sans-semibold.woff') format('woff'),url('../fonts/open-sans-semibold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
     font-stretch: normal
@@ -52,7 +52,14 @@
     font-stretch: normal
   }
   
-  
+  @font-face {
+    font-family:'InterMedium';
+    src: url('../fonts/Inter-Medium.eot');
+    src: url('../fonts/Inter-Medium.eot?#iefix') format('embedded-opentype'),url('../fonts/Inter-Medium.woff2') format('woff2'),url('../fonts/Inter-Medium.woff') format('woff'),url('../fonts/Inter-Medium.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+    font-stretch: normal
+  }
   
   
   
