--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,8 +91,8 @@ hr {
 }
 @font-face {
   font-family: "OpenSans";
-  src: url("../fonts/OpenSansSemiBold.eot");
-  src: url("../fonts/OpenSansSemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSansSemiBold.woff2") format("woff2"), url("../fonts/OpenSansSemiBold.woff") format("woff"), url("../fonts/OpenSansSemiBold.ttf") format("truetype");
+  src: url("../fonts/open-sans-semibold.eot");
+  src: url("../fonts/open-sans-semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans-semibold.woff2") format("woff2"), url("../fonts/open-sans-semibold.woff") format("woff"), url("../fonts/open-sans-semibold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
@@ -117,6 +117,14 @@ hr {
   font-family: "OpenSansCondensed";
   src: url("../fonts/open-sans-condensed-bold.eot");
   src: url("../fonts/open-sans-condensed-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans-condensed-bold.woff2") format("woff2"), url("../fonts/open-sans-condensed-bold.woff") format("woff"), url("../fonts/open-sans-condensed-bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+  font-stretch: normal;
+}
+@font-face {
+  font-family: "InterMedium";
+  src: url("../fonts/Inter-Medium.eot");
+  src: url("../fonts/Inter-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/Inter-Medium.woff2") format("woff2"), url("../fonts/Inter-Medium.woff") format("woff"), url("../fonts/Inter-Medium.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-stretch: normal;
@@ -1622,7 +1630,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   text-align: center;
-  font-family: "Inter";
+  font-family: "InterMedium";
   background: linear-gradient(40.37deg, #E80B8B 0%, #FF8ED0 100%);
   border-radius: 50px;
   width: 203px;
