--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1522,7 +1522,7 @@ body {
                     font-size: 16px;
                     // line-height: 19px;
                     text-align: center;
-                    font-family: 'Inter';
+                    font-family:'InterMedium';
                     background: linear-gradient(40.37deg, #E80B8B 0%, #FF8ED0 100%);
                     border-radius: 50px;
                     width: 203px;
